# desafio-backend

./: README.md  docker-compose.yml
api/: .env.local  Dockerfile  README.md  pyproject.toml
api/src/: main.py
api/src/api/: routers.py
api/src/api/controllers/: suggestion_controller.py
api/src/api/dependencies/: services.py
api/src/data/repositories/: base.py  suggestion_repository.py
api/src/services/: base.py  score_service.py  suggestion_service.py
api/src/services/exceptions/: exceptions.py
api/src/services/models/: suggestions_models.py
api/tests/: conftest.py  server.py
api/tests/test_api/test_controllers/: test_suggestion_controller.py
api/tests/test_services/: test_suggestion_service.py
mobile/: README.md  pubspec.yaml
mobile/ios/Runner/: Info.plist
mobile/lib/: main.dart
mobile/lib/api/: suggestion_api.dart
mobile/lib/screens/: main_home_page.dart
mobile/lib/widget/: button_widget.dart  list_cities_widget.dart
web/: Dockerfile  env.sh  package.json
web/conf/conf.d/: default.conf
web/nginx/: default.conf  nginx.conf
web/public/: index.html
web/src/: App.tsx  index.tsx
web/src/components/: index.ts
web/src/components/CitiesSelect/: CitiesSelect.tsx  index.ts
web/src/components/GeolocationInfo/: GeolocationInfo.tsx  index.ts  styles.ts
web/src/components/HeaderLayout/: HeaderLayout.tsx  styles.ts
web/src/config/: enviroments.ts  index.ts
web/src/routes/: routes.tsx  types.ts
web/src/store/: index.ts  store.ts
web/src/styles/: globalStyle.ts  index.ts  styled.d.ts  theme.ts  variables.ts
(+21 files in other folders)
